sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: Invalid literal number
for (i<-getNombreValeurs()-2to 0 by -1 )
                           ^AlgBubbleSort2:17: error: illegal start of simple expression
}
^