sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() 
{

for (i<-getNombreValeurs()-2to 0 by -1 )
{
	for (j<-i to 0 by -1)
	{
		if (plusPetit(j+1,j)==true)
		{
			echange(j,j+1)
		}
	}

}

}
